# game

./: package.json
apps/frontend/: components.json  package.json  svelte.config.js  tailwind.config.js
apps/frontend/src/: app.d.ts  app.scss
apps/frontend/src-tauri/: Cargo.toml  tauri.conf.json
apps/frontend/src-tauri/src/: main.rs
apps/frontend/src/lib/: auth.ts  client.ts  colors.ts
apps/frontend/src/lib/components/game/: Card.svelte  Game.svelte  InGame.svelte  Lobby.svelte  Player.svelte  game.ts  mana-bubble.svelte  type.ts  (+1 more)
apps/frontend/src/lib/mutations/: auth.ts
apps/frontend/src/lib/stores/: access-token.ts  dialog.ts  theme.ts
apps/frontend/src/routes/: +layout.svelte
apps/frontend/src/routes/(app)/: +layout.svelte  +page.svelte
apps/frontend/src/routes/login/: +page.svelte
apps/frontend/src/routes/refresh-token/: +server.ts
apps/frontend/src/routes/save-login/: +server.ts
apps/rusty/: Cargo.toml  bindings.ts  package.json
apps/rusty/src/: main.rs
apps/rusty/src/game/: card.rs  combat.rs  deck.rs  mana.rs  mod.rs  player.rs  stat.rs  test.rs  turn.rs
apps/rusty/src/game/action/: add_stat.rs  generate_mana.rs  mod.rs
apps/rusty/src/game/decks/: angels.rs  black.rs  blue.rs  green.rs  mod.rs  red.rs  white.rs
apps/rusty/src/game/effects/: mod.rs  modify_stat_effect.rs
apps/rusty/src/http/: mod.rs
apps/rusty/src/http/controllers/: authentication.rs  lobby.rs
apps/rusty/src/http/routers/: authentication.rs  lobby.rs  mod.rs
apps/rusty/src/lobby/: lobby.rs  manager.rs
apps/rusty/src/services/: jwt.rs
(+17 files in other folders)
