[package]
name = "tfa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
rspc = "0.2.0"
rspc-axum = { version = "0.1.1", features = ["ws"] }
axum = "0.7.0"
serde = "1.0.209"
specta = "1.0.5"
sqlx = { version = "0.8.1", features = [
  "postgres",
  "runtime-tokio-rustls",
  "time",
] }
tokio = { version = "1.39.3", features = [
  "rt-multi-thread",
  "macros",
  "signal",
] }
totp-rs = { version = "5.6.0", features = [
  "qr",
  "serde_support",
  "otpauth",
  "gen_secret",
] }
tower-http = { version = "0.5.2", features = ["cors"] }
jsonwebtoken = "9.3.0"
bcrypt = "0.15.1"
uuid = { version = "1.10.0", features = ["v4"] }
futures = "0.3.30"
ulid = "1.1.3"
textwrap = "0.16.1"
rand = "0.8.5"
redis = { version = "0.27.2", features = ["tokio-comp"] }
tokio-stream = "0.1.16"
serde_json = "1.0.128"
async-stream = "0.3.5"
async-trait = "0.1.82"
